fix urgent breaking styles on mobile

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -287,3 +287,36 @@ table {
 #slide-right {
 	right: 20px;
 }
+
+/* mobile settings */
+@media (max-width: 500px) {
+	#root {
+		display: flex;
+		min-height: 100vh;
+		max-width: 100vw;
+		flex-direction: column;
+	}
+
+	#root > *:not(#navbar-container, #footer-container) {
+		flex: 1;
+	}
+
+	#navbar-links,
+	#footer-links-container {
+		flex-direction: column;
+		margin: 0;
+		padding: 0;
+	}
+	#disclaimer-text {
+		max-width: 75vw;
+		text-align: center;
+		margin: 0;
+	}
+	#header h2 {
+		font-size: 2em;
+		text-align: center;
+	}
+	#header p {
+		text-align: center;
+	}
+}
